--- a/templates/email/password_reset_email.html
+++ b/templates/email/password_reset_email.html
@@ -9,7 +9,7 @@
     <p>Hello,</p>
     <p>We've received a request to reset your password. Please click on the link below to reset your password:</p>
     <p><a href="{{ reset_password_url }}">Reset Password</a></p>
-    <p>If you did not request this password reset, you can safely ignore this email.</p>
+    <p>If you did not request this password reset, you can safely ignore this email. Thankyou</p>
     <p>Best regards,</p>
     <p>LawTabby Team</p>
 </body>
